# pwhw7

./: config.ini  main.py  my_select.py  pyproject.toml  seed.py
migrations/: env.py
migrations/versions/: 983d749499ff_init.py
src/: db.py
