[tool.poetry]
name = "pwhw7-02"
version = "0.1.0"
description = ""
authors = ["STsapko <stsapko@gmail.com>"]
readme = "README.md"
packages = [{include = "pwhw7_02"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.17"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
faker = "^18.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
